--- a/src/components/Component_DashBoard/SellerHomePage/SellerHomePage.css
+++ b/src/components/Component_DashBoard/SellerHomePage/SellerHomePage.css
@@ -1,9 +1,10 @@
 .Table {
   display: grid;
   padding-right: 10px;
+  padding-left: 50px;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: 100px; /* set the height of each row to 100px */
-  gap: 30px; /* add a gap of 10px between each item */
+  margin-bottom: -50px; /* add a gap of 10px between each item */
   justify-items: start;
   color: #ffff;
   font-size: medium;
